# terminator

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: ci.yml  deploy_commit.yml  deploy_release.yml  manual.yml
src/: errors.rs  facade.rs  handlers.rs  lib.rs  main.rs  polling.rs  storage.rs
src/clients/: docker.rs
src/handlers/: execute.rs  subscribe.rs
