[package]
name = "terminator"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
name = "terminator"

[dependencies]
actix = "0.12.0"
actix-web = "3.3.2"
env_logger = "0.9.0"
log = "0.4.14"
rcon = { git = "https://github.com/donkey-engine/rcon-rs" }
redis = { version = "0.17", features = ["connection-manager", "tokio-comp"] }
serde = "1.0.130"
serde_json = "1.0.71"
thiserror = "1.0.30"
